[package]
name = "rust-jwt-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "rust-jwt-service"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.68"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
actix-web-httpauth = "0.8.0"

[dev-dependencies]
claim = "0.5.0"
reqwest = { version = "0.11.14", features = ["json"] }

